# netutils-plugins

./: Cargo.toml  PLUGIN_DEVELOPMENT.md  README.md
.github/workflows/: ci.yml
crates/netutils-plugin-sdk/: Cargo.toml  README.md
crates/netutils-plugin-sdk/src/: lib.rs
plugins/chrome-proxy/: Cargo.toml  README.md  plugin.toml
plugins/chrome-proxy/src/: main.rs
plugins/mcp/: Cargo.toml  README.md  plugin.toml
plugins/mcp/src/: main.rs
plugins/sse/: Cargo.toml  README.md  plugin.toml
plugins/sse/src/: main.rs
plugins/subdomain/: Cargo.toml  README.md  plugin.toml
plugins/subdomain/src/: main.rs
plugins/ws/: Cargo.toml  README.md  plugin.toml
plugins/ws/src/: main.rs
