[package]
name = "netutils-plugin-subdomain"
version = "0.1.0"
edition = "2021"
description = "Subdomain discovery plugin for netutils"
license = "MIT"
repository = "https://github.com/dreamsxin/netutils-plugins"
readme = "README.md"
keywords = ["network", "dns", "subdomain", "discovery"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "netutils-subdomain"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
netutils-plugin-sdk = { version = "0.1.1", path = "../../crates/netutils-plugin-sdk" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
